admission-webhook/deploy/webhook-manifests.yml
## Template to deploy the GMSA webhook
## TODO: make this a helmchart instead?

apiVersion: v1
kind: Namespace
metadata:
  name: gmsa-webhook
  labels:
    gmsa-webhook: disabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gmsa-webhook
  namespace: gmsa-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gmsa-webhook
  template:
    metadata:
      labels:
        app: gmsa-webhook
    spec:
      serviceAccountName: gmsa-webhook
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
      - name: gmsa-webhook
        image: sigwindowstools/k8s-gmsa-webhook:latest
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: 443
        ports:
        - containerPort: 443
        volumeMounts:
          - name: tls
            mountPath: "/tls"
            readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: gmsa-webhook
          items:
          - key: tls_private_key
            path: key
          - key: tls_certificate
            path: crt

---

apiVersion: v1
kind: Service
metadata:
  name: gmsa-webhook
  namespace: gmsa-webhook
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: gmsa-webhook

---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gmsa-webhook
webhooks:
- name: admission-webhook.windows-gmsa.sigs.k8s.io
  clientConfig:
    service:
      name: gmsa-webhook
      namespace: gmsa-webhook
      path: "/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeU1Ea3lPREUyTkRjek1Wb1hEVE15TURreU5URTJORGN6TVZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTjJRCm1pS1IrdCtBcFVFYkR2STNBRE1CdEVsa1d2ZFhxRjBhVnkxZk5IOVVaZEhJSEJXblNmNjJVS3F4aFNXdGdhWTIKTStNcVE5OWdKdXNReHhUTEFPYUczRHRmeUJDUGxqbmxVNmZtRHhJWCsvaElMRUJtNlBqcmVOM3FDQzZ4dVpFSgpCMDZSMkJ5d0NEV1 [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["*"]
    resources: ["pods"]
  failurePolicy: Fail
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  # don't run on gmsa-webhook
  namespaceSelector:
    matchExpressions:
      - key: gmsa-webhook
        operator: NotIn
        values: [disabled]

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: gmsa-webhook
webhooks:
- name: admission-webhook.windows-gmsa.sigs.k8s.io
  clientConfig:
    service:
      name: gmsa-webhook
      namespace: gmsa-webhook
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvakNDQWVhZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeU1Ea3lPREUyTkRjek1Wb1hEVE15TURreU5URTJORGN6TVZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTjJRCm1pS1IrdCtBcFVFYkR2STNBRE1CdEVsa1d2ZFhxRjBhVnkxZk5IOVVaZEhJSEJXblNmNjJVS3F4aFNXdGdhWTIKTStNcVE5OWdKdXNReHhUTEFPYUczRHRmeUJDUGxqbmxVNmZtRHhJWCsvaElMRUJtNlBqcmVOM3FDQzZ4dVpFSgpCMDZSMkJ5d0NEV1 [...]
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["*"]
    resources: ["pods"]
  failurePolicy: Fail
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  # don't run on gmsa-webhook
  namespaceSelector:
    matchExpressions:
    - key: gmsa-webhook
      operator: NotIn
      values: [disabled]
